<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@mipmap/ic_home_foreground"
        android:title="Home"/>
    <item
        android:id="@+id/habits"
        android:enabled="true"
        android:icon="@mipmap/ic_habit_foreground"
        android:title="My Habits"/>
    <item
        android:id="@+id/friends"
        android:enabled="true"
        android:icon="@mipmap/ic_friend_foreground"
        android:title="My Friends"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@mipmap/ic_settings_foreground"
        android:title="More"/>
    <item
        android:id="@+id/uncheckedItem"
        android:visible="false"
        android:title="" />

</menu>